Regression: Optimal Display can't be turned off in Edit Mode (GPU subdivision) #99715

Closed
opened 2022-07-15 01:02:20 +02:00 by Chris Plush · 10 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.29

Blender Version
Broken: 3.2.0 and 3.2.1
Worked: 3.1.2
Caused by 3f305b9ab3

Short description of error
The Subdivision Surface modifier's Optimal Display feature is always on in Edit Mode, even when it's turned off in the modifier.

Exact steps for others to reproduce the error

  • Add a Subdivision Surface modifier to the default cube.
  • Enable GPU subdivision from preferences tab
  • Go into Wireframe Shading. Turn off Optimal Display in the modifier. (This works as expected in Object Mode)
  • but then tab into Edit Mode and the geometry is now drawn with Optimal Display despite it being turned off.

Thanks!

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.29 **Blender Version** Broken: 3.2.0 and 3.2.1 Worked: 3.1.2 Caused by 3f305b9ab3 **Short description of error** The Subdivision Surface modifier's Optimal Display feature is always on in Edit Mode, even when it's turned off in the modifier. **Exact steps for others to reproduce the error** - Add a Subdivision Surface modifier to the default cube. - Enable GPU subdivision from preferences tab - Go into Wireframe Shading. Turn off Optimal Display in the modifier. (This works as expected in Object Mode) - but then tab into Edit Mode and the geometry is now drawn with Optimal Display despite it being turned off. Thanks!
Author

Added subscriber: @blengine

Added subscriber: @blengine
Member

Added subscribers: @kevindietrich, @PratikPB2123

Added subscribers: @kevindietrich, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm this regression.
cc @kevindietrich

Thanks for the report. I can confirm this regression. cc @kevindietrich
Pratik Borhade changed title from Optimal Display can't be turned off in Edit Mode to Regression: Optimal Display can't be turned off in Edit Mode (GPU subdivision) 2022-07-15 06:08:50 +02:00
Member

bisecting points to 3f305b9ab3

bisecting points to 3f305b9ab3
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

According to the description in {3f305b9ab3cb} this is an intentional change. Currently testing if it can be fine-tuned, if not I want to close this task.

According to the description in {3f305b9ab3cb} this is an intentional change. Currently testing if it can be fine-tuned, if not I want to close this task.
Member

According to the description in {3f305b9ab3cb} this is an intentional change

Yes, I had read that too at the time I bisected this. From commit message and code comment change looked intentional to me.
But behavior is now inconsistent with GPU Subdivision ON-OFF.

> According to the description in {3f305b9ab3cb} this is an intentional change Yes, I had read that too at the time I bisected this. From commit message and code comment change looked intentional to me. But behavior is now inconsistent with GPU Subdivision ON-OFF.

This issue was referenced by 78ad9ebed3

This issue was referenced by 78ad9ebed3a55138c0a576c4200ab0fd6d8e3712
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jeroen Bakker self-assigned this 2022-08-02 13:41:57 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99715
No description provided.